test/analyze/type_check/record/accessing.exp
Error: Expected type `String` but found `Int`
test/analyze/type_check/record/accessing.myte:21:3-9
 21 |   (x1.foo: String);
    |    ^^^^^^

Error: Expected type `String` but found `Bool`
test/analyze/type_check/record/accessing.myte:22:3-12
 22 |   (x1.baz[1]: String);
    |    ^^^^^^^^^

Error: Expected type `String` but found `Rec1`
test/analyze/type_check/record/accessing.myte:23:3-9
 23 |   (x2.foo: String);
    |    ^^^^^^

Error: Expected type `String` but found `Int`
test/analyze/type_check/record/accessing.myte:24:3-13
 24 |   (x2.foo.foo: String);
    |    ^^^^^^^^^^

Error: Expected type `String` but found `(Unit, Bool)`
test/analyze/type_check/record/accessing.myte:25:3-13
 25 |   (x2.foo.baz: String);
    |    ^^^^^^^^^^

Error: Expected type `String` but found `Bool`
test/analyze/type_check/record/accessing.myte:26:3-16
 26 |   (x2.foo.baz[1]: String);
    |    ^^^^^^^^^^^^^